# genaiti

./: .env.sample  .gitignore  README.md  chainlit.md  docker-compose.yaml  ntealan_llm_chainlit.py  ntealan_llm_chainlit_copilot.py  pyproject.toml  requirements.txt
.chainlit/: config.toml
.chainlit/translations/: fr-FR.json
.trash/: cypher.py
public/: chainlit_custom.css
src/docs/: cypher_dictionary_structure.md
src/experimentations/: lang_chain.ipynb  ntealan_llm.ipynb
src/genaiti/: callbacks.py  graph_chain.py  prompts_template.py  utils.py
src/integration/: copilot_chainlit.html
